<resources>
    <string name="app_name">Note Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="note">Note</string>
    <string name="add_note">Add Note</string>
    <string name="update_note">Update Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="button_add">ADD</string>
    <string name="creating_account">"Creating… "</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button_register">REGISTER</string>
    <string name="verifying">Verifying…</string>
    <string name="button_login">LOGIN</string>
    <string name="dont_have_an_account_sign_up_now">don\'t have an account sign up now</string>
    <string name="button_update">UPDATE</string>
    <string name="details">Details</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="no_note_available">No note available</string>
    <string name="creating">Creating...</string>
    <string name="edit">EDIT</string>
    <string name="loading">Loading...</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="icon">Icon</string>
    <string name="icon_text">Icon Text</string>
    <string name="you_want_to_log_out">You want to log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="you_want_to_delete_this_note_naction_cannot_be_undone">You want to delete this note? \nAction cannot be undone.</string>
</resources>