<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.home.HomeFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="65sp"
            android:layout_marginHorizontal="15dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:backgroundTint="@color/app_bg"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add"
            android:outlineSpotShadowColor="@color/app_bg" />


        <TextView
            android:id="@+id/tvNoContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text="@string/no_note_available"
            android:textSize="@dimen/xl"
            android:drawableTop="@drawable/ic_warning" />

        <androidx.cardview.widget.CardView
            android:id="@+id/loading_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:indeterminateTint="@color/gray" />

                <TextView
                    android:id="@+id/tvLoadingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/loading"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>