<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.screens.addEditView.base.BaseManageAddEditFragment">

    <data>
        <variable
            name="viewModel"
            type="alvin.note.ui.screens.addEditView.base.BaseManageAddEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65sp">

<!--        <TextView-->
<!--            android:id="@+id/tvTitle"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/add_note"-->
<!--            android:textColor="@color/black"-->
<!--            android:paddingVertical="12dp"-->
<!--            android:background="@color/app_bg"-->
<!--            android:textSize="24sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toTopOf="@+id/tilDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/viewRed"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:onClick="onClickColorSelect" />

                <View
                    android:id="@+id/viewYellow"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:onClick="onClickColorSelect" />

                <View
                    android:id="@+id/viewGreen"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:onClick="onClickColorSelect" />

                <View
                    android:id="@+id/viewCyan"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@color/cyan"
                    android:onClick="onClickColorSelect" />

                <View
                    android:id="@+id/viewPurple"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@color/purple"
                    android:onClick="onClickColorSelect" />

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:letterSpacing="0.3"
            android:text="@string/button_add"
            android:textSize="@dimen/m"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
            app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/progressBarContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="50dp">

                <ProgressBar
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

                <TextView
                    android:id="@+id/tvLoadingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/creating"
                    android:textStyle="bold" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>